fixed overflow issue with wrapper

--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -5,7 +5,6 @@
 }
 
 .wrapper {
-  overflow: auto;
   height: 0;
 }
 
@@ -13,4 +12,6 @@
   background: lightgray;
   border: 1px;
   border-style: solid;
+  height: 100%;
+  overflow: auto;
 }
